# magnolia

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
go/: main.go
src/: main.rs
